--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
 hello gm
 this is second line
+
+AWS
+Email= s.jagdale0604@gmail.com
+Password=Shwetajagdale@123
+
+
+DOCKER HUB
+username shweta064
+Password Shweta@123
+
+Github
+Email= s.jagdale0604@gmail.com
+Password= sj920476
